first workable version

--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
   "homepage": "https://github.com/b1conrad/pico-debug#readme",
   "bin": {
     "pico-debug": "./cli.js"
+  },
+  "dependencies": {
+    "prompt": "^1.0.0",
+    "request": "^2.88.2"
   }
 }
