--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "pico-debug": "./cli.js"
   },
   "dependencies": {
-    "prompt": "^1.0.0",
-    "request": "^2.88.2"
+    "node-fetch": "^2.6.0",
+    "prompt": "^1.0.0"
   }
 }
